--- a/Projeto-LP2-dev/Examples/Header/header.html
+++ b/Projeto-LP2-dev/Examples/Header/header.html
@@ -16,7 +16,7 @@
 					<li><a href="#">Page</a></li>
 				</ul>
 			</nav>
-			<a href="header.html"><img class="logo" src="logo.png"></a>
+			<a href="#" class="logo">TEXT</a>
 			<nav class="right-menu">
 				<ul>
 					<li><a href="#">Page</a></li>
@@ -27,9 +27,6 @@
 			</nav>
 		</div>
 	</header>
-	<div id="body">
-		
-	</div>
 
 </body>
 </html>
