--- a/Projeto-LP2-dev/sportstab.html
+++ b/Projeto-LP2-dev/sportstab.html
@@ -14,7 +14,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr><td><caption>BRASILEIRÃO SÉRIE A</caption></td></tr>
+			<caption>BRASILEIRÃO SÉRIE A</caption>
 			<tr>
 				<td>1</td>
 				<td><img class="flamengo"></td>
