--- a/IFN/login.html
+++ b/IFN/login.html
@@ -28,9 +28,9 @@
 			<a id="esqueceu-senha" href="#">Esqueceu sua senha?</a>
 		</section>
 		<footer id="rodape-login">
-			<div class="box">
+			<div class="box-flex">
 				<a id="cadastrar" href="#">Não possui uma conta? CADASTRE-SE</a>
-				<button type="submit" id="btn-entrar">Entrar</button>
+				<button class="button" type="submit" id="btn-entrar">Entrar</button>
 				<div class="clear"></div> <!-- da um clear pro botao nao sair da div -->
 			</div>
 			<div class="clear"></div>
