--- a/IFN/sportstab.html
+++ b/IFN/sportstab.html
@@ -2,19 +2,21 @@
 <html>
 <head>
 	<title>Tabela</title>
-	<link rel="stylesheet" type="text/css" href="css/times.css">
+	<link rel="stylesheet" type="text/css" href="_css/individuals/times.css">
+	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
+
 	<meta charset="utf-8">
 </head>
 <body>
 	<table id="tabclas">
 		<thead>
+			<caption id="title">Brasileiro 2018</caption>
 			<tr>
 				<th colspan="3">Classificação</th>
 				<th>Pontos</th>
 			</tr>
 		</thead>
 		<tbody>
-			<caption>BRASILEIRÃO SÉRIE A</caption>
 			<tr>
 				<td>1</td>
 				<td><img class="flamengo"></td>
