--- a/IFN/esportes.html
+++ b/IFN/esportes.html
@@ -10,12 +10,34 @@
 	<header>
 		
 	</header>
-	<section id="corpo">
-		<div class="div-noticia" id="n1"><img src="https://s2.glbimg.com/Nvf0FKtbzasGcdyAys1VbTzERIE=/0x0:4024x2944/1600x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2018/1/Z/Ay1BrGSR2IQOfCcTsFOw/40.jpg"><span><h1>SELEÇÃO DO POVO</h1><P>Pesquisa para conhecer a convovação ideal para os torcedores aponta quatro nomes diferentes com relação à de Tite</P></span></div>
-	</section>
-	<aside>
-		<iframe src="sportstab.html" id="frame-sports"></iframe>
-	</aside>
+	<div id="content">
+		<section id="corpo">
+			<a href="https://globoesporte.globo.com/futebol/selecao-brasileira/noticia/selecao-do-povo-tinha-rafinha-arthur-lucas-lima-e-rodriguinho-na-lista.ghtml">
+				<div class="div-noticia">
+					<img src="https://s2.glbimg.com/Nvf0FKtbzasGcdyAys1VbTzERIE=/0x0:4024x2944/1600x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2018/1/Z/Ay1BrGSR2IQOfCcTsFOw/40.jpg">
+					<span><h1>SELEÇÃO DO POVO</h1><P>Pesquisa para conhecer a convovação ideal para os torcedores aponta quatro nomes diferentes com relação à de Tite</P></span>
+				</div>
+			</a>
 
+			<a href="http://interativos.globoesporte.globo.com/futebol/copa-do-mundo/especial/rota-dos-convocados">
+				<div class="div-noticia">
+					<img src="https://s2.glbimg.com/RFwjkeG_ujJ6XFUl0ki2C9PieF8=/0x65:720x470/1080x608/smart/http://s2.glbimg.com/u7SqDhTRPbjjrkGqtIMXPYcPfO0=/0x0:720x620/720x620/s.glbimg.com/es/ge/f/original/2018/05/12/carrossel-rota_convocados.png">
+					<span><h1>ROTA DOS CONVOCADOS</h1><P>Veja por quais clubes os 23 chamados por Tite para Copa passaram como profissionais e há quanto tempo defendem a Seleção</P></span>
+				</div>
+			</a>
+
+			<a href="https://globoesporte.globo.com/futebol/selecao-brasileira/noticia/selecao-do-povo-tinha-rafinha-arthur-lucas-lima-e-rodriguinho-na-lista.ghtml">
+				<div class="div-noticia">
+					<img src="https://s2.glbimg.com/Nvf0FKtbzasGcdyAys1VbTzERIE=/0x0:4024x2944/1600x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2018/1/Z/Ay1BrGSR2IQOfCcTsFOw/40.jpg">
+					<span><h1>SELEÇÃO DO POVO</h1><P>Pesquisa para conhecer a convovação ideal para os torcedores aponta quatro nomes diferentes com relação à de Tite</P></span>
+				</div>
+			</a>
+
+		</section>
+		<aside>
+			<iframe src="sportstab.html" id="frame-sports"></iframe>
+		</aside>
+		<div class="clear"></div>
+	</div>
 </body>
 </html>
