--- a/IFN/sportstab.html
+++ b/IFN/sportstab.html
@@ -10,7 +10,7 @@
 <body>
 	<table id="tabclas">
 		<thead>
-			<caption id="title">Brasileiro 2018</caption>
+			<caption id="title">BRASILEIRÃO 2018</caption>
 			<tr>
 				<th colspan="3">Classificação</th>
 				<th>Pontos</th>
