--- a/Examples/Header/header.html
+++ b/Examples/Header/header.html
@@ -1,30 +1,102 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Teste</title>
+	<title>Header</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="header.css">
+	<style type="text/css">
+
+		* {
+			padding: 0;
+			margin: 0;
+		}
+
+		#main-header {
+			width: 100%;
+			border-bottom: 1px solid black;
+		}
+
+		#main-header-content {
+			/*border: 1px solid red;*/
+			width: 50%;
+			margin: 0 auto;
+			height: 74px;
+			display: flex;
+			flex-direction: row;
+			/*justify-content: space-between;*/
+			justify-content: space-around;
+			align-items: center;
+			flex-wrap: wrap;
+		}
+		
+		.menu {
+			flex-wrap: wrap;
+			align-items: center;
+			width: 40%;
+			border: 1px solid red;
+			height: 100%;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			list-style: none;
+		}
+
+		.menu li {
+			height: 100%;
+		}
+
+		.menu a {
+			text-decoration: none;
+			text-transform: uppercase;
+		}
+
+		.logo {
+			/*margin: 0 50px;*/
+			text-decoration: none;
+		}
+
+		.dropdown-content {
+			display: none;
+			position: absolute;
+			z-index: 1;
+			background-color: white;
+		}
+
+		.dropdown:hover .dropdown-content {
+			display: block;
+		}
+
+		.dropdown-content a {
+			display: block;
+		}
+
+
+
+
+
+	</style>
 </head>
 <body>
-	<header id="topo">
-		<div id="content-topo">
-			<nav class="left-menu">
-				<ul>
-					<li><a href="#">Page</a></li>
-					<li><a href="#">Page</a></li>
-					<li><a href="#">Page</a></li>
-					<li><a href="#">Page</a></li>
-				</ul>
-			</nav>
-			<a href="#" class="logo">TEXT</a>
-			<nav class="right-menu">
-				<ul>
-					<li><a href="#">Page</a></li>
-					<li><a href="#">Page</a></li>
-					<li><a href="#">Page</a></li>
-					<li><a href="#">Page</a></li>
-				</ul>
-			</nav>
+
+	<header id="main-header">
+		<div id="main-header-content">
+			<ul class="menu">
+				<li class="dropdown">
+					<a href="#">Notícias
+					<div class="dropdown-content">
+						<a href="#">no Brasil</a>
+						<a href="#">no Mundo</a>
+					</div></a>
+					
+				</li>
+				<li><a href="#">Esportes</a></li>
+				<li><a href="#">Entretenimento</a></li>
+			</ul>
+			<a href="#" class="logo"><h1>IFN</h1></a>
+			<ul class="menu">
+				<li><a href="#">Filmes & Séries</a></li>
+				<li><a href="#">Contato</a></li>
+				<li><a href="#">Entrar</a></li>
+			</ul>
 		</div>
 	</header>
 
