--- a/Examples/Header/header.html
+++ b/Examples/Header/header.html
@@ -32,21 +32,19 @@
 			flex-wrap: wrap;
 			align-items: center;
 			width: 40%;
-			border: 1px solid red;
-			height: 100%;
+			/*border: 1px solid red;*/
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
 			list-style: none;
 		}
 
-		.menu li {
-			height: 100%;
-		}
-
 		.menu a {
+			/*border: 1px solid black;*/
 			text-decoration: none;
 			text-transform: uppercase;
+			padding: 28px 0px;
+			border-bottom: 2px solid blue;
 		}
 
 		.logo {
@@ -55,10 +53,13 @@
 		}
 
 		.dropdown-content {
+			width: 200px;
 			display: none;
 			position: absolute;
 			z-index: 1;
-			background-color: white;
+			margin-top: 28px;
+			border: 1px solid black;
+			padding-left: 10px;
 		}
 
 		.dropdown:hover .dropdown-content {
@@ -66,6 +67,7 @@
 		}
 
 		.dropdown-content a {
+			border-bottom: none;
 			display: block;
 		}
 
@@ -80,8 +82,7 @@
 	<header id="main-header">
 		<div id="main-header-content">
 			<ul class="menu">
-				<li class="dropdown">
-					<a href="#">Notícias
+				<li class="dropdown"><a href="#">Notícias</a>
 					<div class="dropdown-content">
 						<a href="#">no Brasil</a>
 						<a href="#">no Mundo</a>
