--- a/IFN/login.html
+++ b/IFN/login.html
@@ -5,12 +5,39 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="_css/individuals/login.css">
 	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
 </head>
 <body>
 
+	<!-- inicio do header ############################################################ -->
+	<header id="main-header">
+		<div id="main-header-content">
+			<ul class="menu">
+				<li><a href="#">Notícias</a>
+					<div class="sub-menu">
+						<ul >
+							<a href="#"><li>No Brasil</li></a>
+							<a href="#"><li>No Mundo</li></a>
+						</ul>
+					</div>
+				</li>
+				<li><a href="esportes.html">Esportes</a></li>
+				<li><a href="#">Entretenimento</a></li>
+			</ul>
+			<a href="#" class="logo"><h1>IFN</h1></a>
+			<ul class="menu">
+				<li><a href="filmes_series.html">Filmes & Séries</a></li>
+				<li><a href="#">Contato</a></li>
+				<li><a href="login.html">Entrar</a></li>
+			</ul>
+		</div>
+	</header>
+<!-- fim do header ############################################################### -->
+
+<div id="content">
 	<form id="box-login">
 		<header id="topo-login">
-			<h2>IFN</h2>
+			<h2>ifn.com</h2>
 		</header>
 		<section id="body-login">
 			<div class="box">
@@ -37,6 +64,7 @@
 		</footer>
 
 	</form>
+</div>
 
 </body>
 </html>
