--- a/IFN/filmes_series.html
+++ b/IFN/filmes_series.html
@@ -5,10 +5,37 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="_css/individuals/filmes_series.css">
 	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
 	<script src="_javascript/jquery-3.3.1.min.js"></script>
 	<script src="_javascript/filmes_series.js"></script>
 </head>
 <body>
+
+<!-- inicio do header ############################################################ -->
+	<header id="main-header">
+		<div id="main-header-content">
+			<ul class="menu">
+				<li><a href="#">Notícias</a>
+					<div class="sub-menu">
+						<ul >
+							<a href="#"><li>No Brasil</li></a>
+							<a href="#"><li>No Mundo</li></a>
+						</ul>
+					</div>
+				</li>
+				<li><a href="esportes.html">Esportes</a></li>
+				<li><a href="#">Entretenimento</a></li>
+			</ul>
+			<a href="#" class="logo"><h1>IFN</h1></a>
+			<ul class="menu">
+				<li><a href="filmes_series.html">Filmes & Séries</a></li>
+				<li><a href="#">Contato</a></li>
+				<li><a href="login.html">Entrar</a></li>
+			</ul>
+		</div>
+	</header>
+<!-- fim do header ############################################################### -->
+
 
 	<div id="content">
 		<div class="capa">
