--- a/IFN/esportes.html
+++ b/IFN/esportes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IFN Esportes</title>
+	<title>IFN | Esportes</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="_css/individuals/esportes.css">
 	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
