--- a/IFN/filmes_series.html
+++ b/IFN/filmes_series.html
@@ -34,6 +34,7 @@
 			</ul>
 		</div>
 	</header>
+	<a href="#main-header" id="voltar-topo"><i class="fas fa-angle-double-up fa-3x"></i></a>
 <!-- fim do header ############################################################### -->
 
 
