--- a/IFN/header.html
+++ b/IFN/header.html
@@ -31,6 +31,7 @@
 			</ul>
 		</div>
 	</header>
+	<a href="#main-header" id="voltar-topo"><i class="fas fa-angle-double-up fa-3x"></i></a>
 <!-- fim do header ############################################################### -->
 
 </body>
