--- a/IFN/login.html
+++ b/IFN/login.html
@@ -32,6 +32,7 @@
 			</ul>
 		</div>
 	</header>
+	<a href="#main-header" id="voltar-topo"><i class="fas fa-angle-double-up fa-3x"></i></a>
 <!-- fim do header ############################################################### -->
 
 <div id="content">
