--- a/IFN/login.html
+++ b/IFN/login.html
@@ -27,12 +27,12 @@
 			<a href="#" class="logo"><h1>IFN</h1></a>
 			<ul class="menu">
 				<li><a href="filmes_series.html">Filmes & Séries</a></li>
-				<li><a href="#">Contato</a></li>
+				<li><a href="contato.html">Contato</a></li>
 				<li><a href="login.html">Entrar</a></li>
 			</ul>
 		</div>
 	</header>
-	<a href="#main-header" id="voltar-topo"><i class="fas fa-angle-double-up fa-3x"></i></a>
+	<a href="#main-header" id="voltar-topo"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
 <!-- fim do header ############################################################### -->
 
 <div id="content">
@@ -43,11 +43,11 @@
 		<section id="body-login">
 			<div class="box">
 				<label for="email">E-mail</label>
-				<input autocomplete="off" id="email" type="email"> <!-- autocomplete = "off" nao deixa o navegador completar dados -->
+				<input autocomplete="off" id="email" type="email" required> <!-- autocomplete = "off" nao deixa o navegador completar dados -->
 			</div>
 			<div class="box">
 				<label for="senha">Senha</label>
-				<input autocomplete="off" id="senha" type="password">
+				<input autocomplete="off" id="senha" type="password" required>
 			</div>
 			<div class="box">
 				<input id="manter-conectado" type="checkbox" checked="on">
