--- a/IFN/esportes.html
+++ b/IFN/esportes.html
@@ -27,12 +27,12 @@
 			<a href="#" class="logo"><h1>IFN</h1></a>
 			<ul class="menu">
 				<li><a href="filmes_series.html">Filmes & Séries</a></li>
-				<li><a href="#">Contato</a></li>
+				<li><a href="contato.html">Contato</a></li>
 				<li><a href="login.html">Entrar</a></li>
 			</ul>
 		</div>
 	</header>
-	<a href="#main-header" id="voltar-topo"><i class="fas fa-angle-double-up fa-3x"></i></a>
+	<a href="#main-header" id="voltar-topo"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
 <!-- fim do header ############################################################### -->
 
 	<div id="content">
