--- a/IFN/noticiasbrasil.html
+++ b/IFN/noticiasbrasil.html
@@ -16,7 +16,7 @@
 				<li><a href="#">Notícias</a>
 					<div class="sub-menu">
 						<ul >
-							<a href="#"><li>No Brasil</li></a>
+							<a href="noticiasbrasil.html"><li>No Brasil</li></a>
 							<a href="#"><li>No Mundo</li></a>
 						</ul>
 					</div>
@@ -32,7 +32,7 @@
 			</ul>
 		</div>
 	</header>
-	<a href="#main-header" id="voltar-topo"><i class="fas fa-angle-double-up fa-3x"></i></a>
+	<a href="#main-header" id="voltar-topo"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
 	<!-- fim do header ############################################################### -->
 	<h1 id="principal-title">NOTÍCIAS NO BRASIL</h1>
 	<section class="section">
