--- a/IFN/entretenimento.html
+++ b/IFN/entretenimento.html
@@ -33,7 +33,7 @@
 			</ul>
 		</div>
 	</header>
-	<a href="#main-header" id="voltar-topo"><i class="fas fa-angle-double-up fa-3x"></i></a>
+	<a href="#main-header" id="voltar-topo"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
 	<!-- fim do header ############################################################### -->
 
 	<!-- SLIDESHOW -->
@@ -163,11 +163,11 @@
 			</div>
 			<div class="div-fashion">
 				<div class="fashion-photo">
-					<a href="https://globoesporte.globo.com/eu-atleta/nutricao/noticia/refrigerante-como-suplemento-em-praticas-esportivas-pode.ghtml">
-					<img src="https://s2.glbimg.com/E9VW3NmpYRHIj-mYiKezH28ir3U=/0x0:1482x1358/2316x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2018/X/D/anBjkfTkyx6BfVD45PLg/istock-105704278.jpg">
+					<a href="https://g1.globo.com/ciencia-e-saude/noticia/como-a-malaria-evoluiu-para-se-tornar-letal-aos-humanos.ghtml">
+					<img src="https://s2.glbimg.com/cGGxA3-yywBoDCkjKpNW4239eKE=/540x304/top/smart/https://i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2018/6/l/GfBl4RRrmaVMBHOLX0Ug/malaria-mosquito-science-photo-library.jpg">
 					</div>
 					<span class="synopsis">
-						<h4>Refrigerante como suplemento? Nutri explica porque não</h4>
+						<h4>Como a malária evoluiu para se tornar letal</h4>
 					</span></a>
 			</div>
 		</section>
