--- a/IFN/entretenimento.html
+++ b/IFN/entretenimento.html
@@ -10,31 +10,38 @@
 </head>
 <body onload="showDivs(0)">
 
-	<!-- inicio do header ############################################################ -->
+<!-- inicio do header ############################################################ -->
 	<header id="main-header">
 		<div id="main-header-content">
 			<ul class="menu">
 				<li><a href="#">Notícias</a>
 					<div class="sub-menu">
 						<ul >
-							<a href="#"><li>No Brasil</li></a>
-							<a href="#"><li>No Mundo</li></a>
+							<a href="noticiasbrasil.html"><li>No Brasil</li></a>
+							<a href="noticiasmundo.html"><li>No Mundo</li></a>
 						</ul>
 					</div>
 				</li>
 				<li><a href="esportes.html">Esportes</a></li>
 				<li><a href="entretenimento.html">Entretenimento</a></li>
 			</ul>
-			<a href="#" class="logo"><h1>IFN</h1></a>
+			<a href="index.html" class="logo"><h1>IFN</h1></a>
 			<ul class="menu">
-				<li><a href="filmes_series.html">Filmes & Séries</a></li>
-				<li><a href="#">Contato</a></li>
+				<li><a href="#">Filmes & Séries</a>
+					<div class="sub-menu">
+						<ul>
+							<a href="filmes.html"><li>Filmes</li></a>
+							<a href="series.html"><li>Séries</li></a>
+						</ul>
+					</div>
+				</li>
+				<li><a href="contato.html">Contato</a></li>
 				<li><a href="login.html">Entrar</a></li>
 			</ul>
 		</div>
 	</header>
 	<a href="#main-header" id="voltar-topo"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
-	<!-- fim do header ############################################################### -->
+<!-- fim do header ############################################################### -->
 
 	<!-- SLIDESHOW -->
 	<h1 id="titulo">ENTRETENIMENTO</h1>
