--- a/IFN/esportes.html
+++ b/IFN/esportes.html
@@ -7,9 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
 	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
 </head>
-<body>
-	
-<!-- inicio do header ############################################################ -->
+<body>	
+	<!-- inicio do header ############################################################ -->
 	<header id="main-header">
 		<div id="main-header-content">
 			<ul class="menu">
@@ -42,6 +41,7 @@
 	<a href="#main-header" id="voltar-topo"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
 <!-- fim do header ############################################################### -->
 
+	<div id="principal-title"><h1>ESPORTES</h1></div>
 	<div id="content">
 		<section id="corpo">
 			<a href="https://globoesporte.globo.com/futebol/selecao-brasileira/noticia/selecao-do-povo-tinha-rafinha-arthur-lucas-lima-e-rodriguinho-na-lista.ghtml">
@@ -58,10 +58,10 @@
 				</div>
 			</a>
 
-			<a href="https://globoesporte.globo.com/futebol/selecao-brasileira/noticia/selecao-do-povo-tinha-rafinha-arthur-lucas-lima-e-rodriguinho-na-lista.ghtml">
+			<a href="https://globoesporte.globo.com/futebol/selecao-brasileira/noticia/selecao-treina-pela-primeira-vez-em-londres-oito-horas-apos-desembarcar.ghtml">
 				<div class="div-noticia">
-					<img src="https://s2.glbimg.com/Nvf0FKtbzasGcdyAys1VbTzERIE=/0x0:4024x2944/1600x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2018/1/Z/Ay1BrGSR2IQOfCcTsFOw/40.jpg">
-					<span><h1>SELEÇÃO DO POVO</h1><P>Pesquisa para conhecer a convovação ideal para os torcedores aponta quatro nomes diferentes com relação à de Tite</P></span>
+					<img src="https://s2.glbimg.com/7ppJnZa3x0Mte-qtqjXkgEXsQAI=/0x0:3500x2090/1280x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2018/5/m/NFCV0BQsWqD2b1Ds7uCg/2018-05-28t165427z-1863658438-rc1490b8a2d0-rtrmadp-3-soccer-worldcup-bra.jpg">
+					<span><h1>SEM DESCANSO</h1><P>No CT do Tottenham, Seleção treina pela primeira vez em Londres oito horas após desembarcar</P></span>
 				</div>
 			</a>
 
