--- a/IFN/entretenimento.html
+++ b/IFN/entretenimento.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="showDivs(0)">
 
-<!-- inicio do header ############################################################ -->
+	<!-- inicio do header ############################################################ -->
 	<header id="main-header">
 		<div id="main-header-content">
 			<ul class="menu">
@@ -23,7 +23,15 @@
 					</div>
 				</li>
 				<li><a href="esportes.html">Esportes</a></li>
-				<li><a href="entretenimento.html">Entretenimento</a></li>
+				<li><a href="#">Entretenimento</a>
+					<div class="sub-menu">
+						<ul>
+							<a href="entretenimento.html"><li>Entretenimento</li></a>
+							<a href="videos.html"><li>Vídeos</li></a>
+						</ul>
+					</div>
+
+				</li>
 			</ul>
 			<a href="index.html" class="logo"><h1>IFN</h1></a>
 			<ul class="menu">
