--- a/IFN/series.html
+++ b/IFN/series.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<!-- inicio do header ############################################################ -->
+	<!-- inicio do header ############################################################ -->
 	<header id="main-header">
 		<div id="main-header-content">
 			<ul class="menu">
@@ -24,7 +24,15 @@
 					</div>
 				</li>
 				<li><a href="esportes.html">Esportes</a></li>
-				<li><a href="entretenimento.html">Entretenimento</a></li>
+				<li><a href="#">Entretenimento</a>
+					<div class="sub-menu">
+						<ul>
+							<a href="entretenimento.html"><li>Entretenimento</li></a>
+							<a href="videos.html"><li>Vídeos</li></a>
+						</ul>
+					</div>
+
+				</li>
 			</ul>
 			<a href="index.html" class="logo"><h1>IFN</h1></a>
 			<ul class="menu">
