--- a/contato.html
+++ b/contato.html
@@ -47,7 +47,7 @@
 		</div>
 	</header>
 	<a href="#main-header" id="voltar-topo"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
-<!-- fim do header ############################################################### -->
+<!-- fim do header ################################################################ -->
 
 	<div id="container">
 		<form id="contact-form">
