--- a/IFN/videos.html
+++ b/IFN/videos.html
@@ -55,26 +55,36 @@
 	<div id="container">
 		<div id="sub-title"><h2>VÍDEOS EM ALTA</h2></div>
 		<div class="video" >
-			<iframe  src="https://www.youtube.com/embed/UknQK-k49Ek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/GCdwKhTtNNw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="video" >
-			<iframe  src="https://www.youtube.com/embed/UknQK-k49Ek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/Cfj4fd53--s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="video" >
-			<iframe  src="https://www.youtube.com/embed/UknQK-k49Ek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/VQH8ZTgna3Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="video" >
-			<iframe  src="https://www.youtube.com/embed/UknQK-k49Ek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/pXRviuL6vMY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="video" >
-			<iframe  src="https://www.youtube.com/embed/UknQK-k49Ek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/cHHLHGNpCSA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="video" >
-			<iframe  src="https://www.youtube.com/embed/UknQK-k49Ek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/RnBT9uUYb1w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div class="video" >
-			<iframe  src="https://www.youtube.com/embed/UknQK-k49Ek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/fKopy74weus" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
+		<div class="video" >
+			<iframe src="https://www.youtube.com/embed/1G4isv_Fylg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+		<div class="video">
+			<iframe src="https://www.youtube.com/embed/47dtFZ8CFo8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+		<div class="video">
+			<iframe src="https://www.youtube.com/embed/F90Cw4l-8NY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+	</div>
 	
 
 </body>
