--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>IFN | Home</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="_css/individuals/index.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
+	<link rel="stylesheet" type="text/css" href="/_css/individuals/index.css">
+	<link rel="stylesheet" type="text/css" href="/_css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="/_css/commons/header.css">
 </head>
 <body>
 	<!-- inicio do header ############################################################ -->
