--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,9 @@
 <head>
 	<title>IFN | Contato</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="_css/individuals/contato.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
+	<link rel="stylesheet" type="text/css" href="css/individuals/contato.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/header.css">
 </head>
 <body>
 	<!-- inicio do header ############################################################ -->
