--- a/entretenimento.html
+++ b/entretenimento.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IFN Entretenimento</title>
+	<title>IFN | Entretenimento</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="_css/individuals/entretenimento.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
-	<script type="text/javascript" src="_javascript/entretenimento.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/individuals/entretenimento.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/header.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/common.css">
+	<script type="text/javascript" src="javascript/entretenimento.js"></script>
 </head>
 <body onload="showDivs(0)">
 
