--- a/filmes.html
+++ b/filmes.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IFN | Filmes e Séries</title>
+	<title>IFN | Filmes</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="_css/individuals/filmes_series.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
-	<script src="_javascript/jquery-3.3.1.min.js"></script>
-	<script src="_javascript/filmes_series.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/individuals/filmes_series.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/header.css">
+	<script src="javascript/jquery-3.3.1.min.js"></script>
+	<script src="javascript/filmes_series.js"></script>
 </head>
 <body>
 
