--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Header</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/header.css">
 
 </head>
 <body>
