--- a/noticiasbrasil.html
+++ b/noticiasbrasil.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IFN Notícias no Brasil</title>
+	<title>IFN | Notícias no Brasil</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="_css/individuals/noticias.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
+	<link rel="stylesheet" type="text/css" href="css/individuals/noticias.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/header.css">
 
 </head>
 <body>
