--- a/sportstab.html
+++ b/sportstab.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Tabela</title>
-	<link rel="stylesheet" type="text/css" href="_css/individuals/times.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="css/individuals/times.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/common.css">
 
 	<meta charset="utf-8">
 </head>
