--- a/videos.html
+++ b/videos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vídeos</title>
+	<title>IFN | Vídeos</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="_css/individuals/videos.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/common.css">
-	<link rel="stylesheet" type="text/css" href="_css/commons/header.css">
+	<link rel="stylesheet" type="text/css" href="css/individuals/videos.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/common.css">
+	<link rel="stylesheet" type="text/css" href="css/commons/header.css">
 </head>
 <body>
 	<!-- inicio do header ############################################################ -->
